Communication between uPC and Upgrader

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@ Upgrader/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 Upgrader/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 Upgrader/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 Upgrader/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+.vs/DependencyCheck/v14/.suo
+Upgrader/bin/Debug/Upgrader.exe
+Upgrader/bin/Debug/Upgrader.exe.config
+Upgrader/bin/Debug/Upgrader.pdb
+Upgrader/obj/Debug/DesignTimeResolveAssemblyReferences.cache
+Upgrader/obj/Debug/Upgrader.csproj.FileListAbsolute.txt
+Upgrader/obj/Debug/Upgrader.csprojResolveAssemblyReference.cache
+Upgrader/obj/Debug/Upgrader.exe
+Upgrader/obj/Debug/Upgrader.pdb
